--- a/app1/templates/app1/emp.html
+++ b/app1/templates/app1/emp.html
@@ -47,6 +47,7 @@
                 <th>Employee Id</th>
                 <th>CPR No</th>
                 <th>Company</th>
+                <th>Department</th>
                 <th>Designation</th>
                 <th>Phone No</th>
                 <th>SOWID</th>
@@ -61,6 +62,7 @@
                     <td>{{ employee.idNumber }}</td>
                     <td>{{ employee.nationalId }}</td>
                     <td>{{ employee.company }}</td>
+                    <td>{{employee.department}}</td>
                     <td>{{ employee.designation }}</td>
                     <td>{{ employee.phoneNumber }}</td>
                     <td>{{ employee.sowId_vehicle_id }}</td>
